# Avalon-extras

./: Makefile  README.md  cts.c  data.test.c  fake-avalon.c  reset.py  test.py
7z100-miscs/: config.7z100
7z100-miscs/patches/linux/zynq/image/: Makefile
7z100-miscs/patches/linux/zynq/patches/: 121-add-dts-for-7z100.patch
7z100-miscs/patches/linux/zynq/profiles/: 7z100.mk
7z100-miscs/patches/u-boot/: 040-add-dts-for-7z100.patch  041-update-init-cfg-for-7z100.patch  042-add-defconfig-for-7z100.patch  Makefile
calc_prepare/: Makefile  hexdump.c  main.c  sha2.c
cgminer-patches/: 0001-avalon2.patch  3.8.3-9cbac85344e6ae2a5f1fa88de576195b674803fd-avalon2.patch
dds238-2-power/: feeds.conf  rpi3.conf
dds238-2-power/etc/: rc.local
fake-avalon/: data.test.c  fake-avalon.c
farm-manager/raspberrypi/: README  change_raspberrypi.sh  check_raspberrypi.sh  distsync.sh  reboot_cgminer.sh  reboot_raspberrypi.sh  update_raspberrypi.sh
farm-manager/raspberrypi/config/: 02-pcgminer  cgminer.avalon2  cgminer.avalon3  network  system
farm-manager/status-report/: .gitignore  README  changelog  chkblock.py  chkerr.py  chkrate.py  chkstat.py  email.template  hsplot.py  poolrate.py  readconfig.py  renderpage.py  sendmail.py  statlogging.py  statreport.py  statreport_example.conf  tmplot.py
farm-manager/utils/rtac/: .gitignore  README  commands.example  hosts.example  readConfig.py  rtac.conf.example  rtac.py  rtacThread.py
farm-manager/www/status/: README  cgminer.php  chkstat.py  index.php  refresh.php  refresh.sh  remote-cgminer-api.py  restart_cgminer.php  restart_cgminer.py  switch_led.php
farm-manager/www/status/css/: style.css
farm-manager/www/status/js/: comm.js
farm-manager/www/status/json/: farm.json  status.json
lcd-tools/: Makefile  README  disp.sh  gpio.c  gpio.h  gpio_test.sh  iic.c  iic.h  lcd.c  lcd.h  main.c  status_disp.sh
miner-debug-system/: README.md
miner-debug-system/docs/: DDS238-2-ZN-S-MODBUS.xls
miner-debug-system/read-datas/: debuglog.sh  mds.sh  mdssub.sh  miner-options.conf  scp-login.exp  ssh-login.exp  ssh-power.py
miner-debug-system/set-dev-id/: read-power.py
miner-debug-system/set-dev-id/python2/: set-device-id.py
miner-debug-system/set-dev-id/python3/: set-device-id.py
mm-tools/: Makefile  Makefile.am  README  TODO  api.h  auc.c  auc.h  configure.ac  crc.h  crc16.c  crc16_soft.c  hexdump.c  iic.h  iic_auc.c  iic_rpi.c  main.c  mboot_api.c  mm_api.c  mm_file1_.mcs  mm_new.mcs
mm-tools/compat/: Makefile.am
mm-tools/compat/jansson-2.6/: Makefile.in  aclocal.m4  config.h.in  configure
mm-tools/compat/jansson-2.6/autom4te.cache/: output.1  requests  traces.1  traces.2
mm-tools/compat/jansson-2.6/src/: Makefile.in
mm-tools/compat/libusb-1.0/: Makefile.in  config.h.in  configure
mm-tools/compat/libusb-1.0/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
mm-tools/compat/libusb-1.0/libusb/: Makefile.in
openwrt-patches/: 0001-usbmon-r36763.patch  disable-703n-kernel-serial-console.patch  fstools-fixes-mount_root.patch  toolchain-uclibc-xattr.patch
scripts/: a3233_avalon_usb_test.py  a3233_avalon_usb_testbench.sh  a3255_modular_test.py  avalon-builder.sh  avalon-mm-modular-test.py  avalon-mm-upgrade.py  avalon-usb2iic-test.py  avalon2-a3255-modular-test.py  avalon3-a3233-modular-test.py  avalon3.5-mm-modular-test.py  build-703n-image.sh  build-avalon-image-all.sh  build-avalon-image-php.sh  build-avalon-image-raspberry-pi.sh  build-avalon-image.sh  build-avalon850-image.sh  build-avalon851-image.sh  build-openwrt-cgminer.sh  build-openwrt-power-image.sh  r  reflash-fpga-controller.sh  test.py
scripts/aci/: Changelog  README  aci.conf  aci.sh  cron.sh  feeds-extra.conf
scripts/avalon1/: a3256_fpga_controller_reset.py  a3256_fpga_controller_test.py
scripts/avalon3/: avalon-mm-modular-test.py
scripts/avalon3.5/: avalon-usb-converter-test.py  avalon-usb2iic-test.py  avalon3.5-mm-modular-cdc-test.py  avalon3.5-mm-modular-hid-test.py  avalon3.5-mm-modular-test.py
scripts/avalon4/: avalon-usb-converter-test.py  avalon4-core-test.py  gencpm.c
scripts/avalon4/auc_programmer/: auc_clibatch.bat  auc_programmer.uvopt  auc_programmer.uvproj
scripts/avalon7/: avalon7-core-test.py  avalon7-pmu-test.py  avalon7-psu-test.py
scripts/avalon8/: avalon8-core-test.py  avalon8-pmu-test.py
scripts/avalon_common/: avalon-core-test.py
scripts/avalon_nano/: Avalon-nano_test.py  a3233_avalon_usb_test.py  a3233_avalon_usb_testbench.sh  avalon_nano_v2.py  avalon_pmu_test.py
scripts/factory/: Makefile  README.md  burn-mcu.sh  burn-mm.sh  burn-pmu.sh  download.sh  install.sh  loop.sh  loop_auc.sh  loop_delay.sh
scripts/factory/desktop/: AvalonMiner_test_script.desktop  BurnAvalon8_841pmu.desktop  burnAvalon8_821pmu.desktop  burnauc3.desktop  burnavalon7_721mm.desktop  burnavalon7_721pmu.desktop  burnavalon7_741mm.desktop  burnavalon7_741pmu.desktop  burnavalon7_761firmware.desktop  burnavalon8_821mm.desktop  burnavalon8_841mm.desktop  burnavalon8_851mm.desktop  testavalon7_pmu.desktop  testavalon8_pmu.desktop  update_721_firmware.desktop  update_741_firmware.desktop  update_auc3_firmware.desktop
slt-debug-system/: README.md  debuglog.sh  scp-login.exp  sds.sh  slt-options.conf  ssh-login.exp
test-data/: connect-work-nonce.sh  get-work-nonce.sh
xiangfu/: encode_votage.c
zctrl-miscs/: kernel_config
zctrl-miscs/patches/linux/: 120-update-dts-for-zctrl.patch
zctrl-miscs/patches/linux/zynq/image/: Makefile
zctrl-miscs/patches/linux/zynq/patches/: 120-add-dts-for-zctrl.patch
zctrl-miscs/patches/linux/zynq/profiles/: zctrl.mk
zctrl-miscs/patches/u-boot/: 030-add-dts-for-zctrl.patch  030-update-dts-for-zctrl.patch  031-update-ddr-for-zctrl.patch  032-add-defconfig-for-zctrl.patch  Makefile
zctrl-miscs/scripts/: setfclk.sh  showtemp.sh
